--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Knjige</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"/>
 </head>
@@ -15,7 +15,7 @@
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-book" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M1 2.828v9.923c.918-.35 2.107-.692 3.287-.81 1.094-.111 2.278-.039 3.213.492V2.687c-.654-.689-1.782-.886-3.112-.752-1.234.124-2.503.523-3.388.893zm7.5-.141v9.746c.935-.53 2.12-.603 3.213-.493 1.18.12 2.37.461 3.287.811V2.828c-.885-.37-2.154-.769-3.388-.893-1.33-.134-2.458.063-3.112.752zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
         </svg>
-        <strong style="margin-left: 3px">  Library</strong>
+        <strong style="margin-left: 3px">Biblioteka</strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,15 +25,15 @@
             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
         </form>
         <div sec:authorize="isAnonymous()" class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" th:href="@{/login}">Login</a>
-            <a class="nav-item nav-link" th:href="@{/register}">Register</a>
+            <a class="nav-item nav-link" th:href="@{/login}">Prijava</a>
+            <a class="nav-item nav-link" th:href="@{/register}">Registracija</a>
         </div>
         <div sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" th:href="@{/books}">Books</a>
-            <a class="nav-item nav-link" th:href="@{/authors}">Authors</a>
-            <a class="nav-item nav-link" th:href="@{/publishers}">Publishers</a>
-            <a class="nav-item nav-link" th:href="@{/categories}">Categories</a>
-            <a class="nav-item nav-link" th:href="@{/logout}">Logout</a>
+            <a class="nav-item nav-link" th:href="@{/books}">Knjige</a>
+            <a class="nav-item nav-link" th:href="@{/authors}">Autori</a>
+            <a class="nav-item nav-link" th:href="@{/publishers}">Izdavači</a>
+            <a class="nav-item nav-link" th:href="@{/categories}">Kategorije</a>
+            <a class="nav-item nav-link" th:href="@{/logout}">Odjavite se</a>
         </div>
     </div>
 </nav>
