--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -258,9 +258,9 @@
                     <h1 class="text-center">Knjige</h1>
 
                     <div class="row py-4">
-                        <div class="col-md-3" th:each="book: ${books}">
+                        <div class="col-md-3" style="max-width: fit-content;" th:each="book: ${books}">
                             <div class="card mb-4 shadow-sm">
-                                <a th:href="@{/books/{id}(id=${book.id})}"><img th:src="@{'/uploads/images/'+${book.coverImage}}" alt="Cover image..." style="width: 100%; height: 280px;"></a>
+                                <a th:href="@{/books/{id}(id=${book.id})}"><img th:src="@{'/uploads/images/'+${book.coverImage}}" alt="Cover image..." style="width:100%; height: 300px;"></a>
                                 <div class="card-body">
                                     <h4 th:text="${book.title}"></h4>
                                     <div class="d-flex justify-content-between align-items-center">
@@ -319,7 +319,8 @@
     <!-- Footer -->
 
 </main>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/js/script.js" type="text/javascript"></script>
 
 </body>
